--- a/MyWeather/src/main/res/layout/activity_main.xml
+++ b/MyWeather/src/main/res/layout/activity_main.xml
@@ -1,7 +1,5 @@
-
 <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,17 +8,9 @@
          space available using match_parent in both dimensions. -->
     <LinearLayout
         android:id="@+id/content_frame"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-
-        <ProgressBar
-            android:id="@+id/weatherProgressBar"
-            android:layout_height="wrap_content"
-            android:layout_width="fill_parent"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:visibility="gone" />
-
-        </LinearLayout>
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
          this as a sliding drawer on the left side for left-to-right
@@ -36,5 +26,5 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="1dp"
-        android:background="#fff"/>
+        android:background="#fff" />
 </android.support.v4.widget.DrawerLayout>
